<resources>
    <string name="app_name">Appealic</string>
    <string name="title_forget_password">Quên mật khẩu</string>
    <string name="title_register">Đăng ký</string>

    <!-- Intro -->

    <!--    Artist_profile-->
    <string name="txtNameArtist">Blackpink</string>
    <string name="txtFollowed">255K followeds</string>
    <string name="btnFollow">Follow</string>
    <string name="btnPlay">Play</string>
    <string name="featuredSong">Featured Song</string>

    <!--    Download-->
    <string name="downloaded">Downloaded</string>
    <string name="numberOfDownloadedSongs">Number of Downloaded songs</string>
    <string name="playRandomly">Play randomly</string>
    <string name="recentlyAdded">Recently Added</string>


    <!--    Forgot_pass_opt-->
    <string name="verifyYourEmail">Verify Your Email</string>
    <string name="verifyEmail">Please verify your email to continue.</string>
    <string name="resendCode">Resend Code</string>
    <string name="verify">Verify</string>

    <!--    Forgot_pass-->
    <string name="forgotPassword">Forgot Password</string>
    <string name="forgetPassword">Please enter your email address to reset your password.</string>
    <string name="labelEmail">Email</string>
    <string name="send">Send</string>

    <!--    Home-->
    <string name="home">Home</string>
    <string name="newRelease">New Release</string>
    <string name="viewAll">View All</string>
    <string name="vietNam">Viet Nam</string>
    <string name="international">International</string>
    <string name="topSong">Top Song</string>
    <string name="recentlyPlayed">Recently Played</string>
    <string name="yourFavouriteArtists">Your Favourite Artists</string>

    <!--    Info_music-->
    <string name="info">Info</string>
    <string name="txtSongName">Blank Space</string>
    <string name="like">Like</string>
    <string name="music">Music</string>
    <string name="album">Album</string>
    <string name="musican">Musician</string>
    <string name="genre">Genre</string>
    <string name="released">Released</string>
    <string name="producer">Producer</string>
    <string name="recommended_playlists">Recommended playlists</string>
    <string name="recommended_songs">Recommended songs</string>
    <string name="album_year">The Album</string>
    <string name="genreName">Hiphop, Pop, Trap</string>
    <string name="yearSong">2020</string>
    <string name="producerName">Teddy, Tommy Brown, R. Tee, 25</string>

    <!--    Liked song-->
    <string name="liked_songs">Liked songs</string>
    <string name="number_of_liked_songs">Number of liked songs</string>
    <string name="add_liked_songs">Add Liked Songs</string>
    <string name="click_here">Click here!</string>

    <!--Library-->
    <string name="library">Library</string>

    <!-- Login -->
    <string name="login_title">Log in to your account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btnLogin">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="sign_up">Sign up</string>

    <!-- Register -->
    <string name="register_register">ĐĂNG KÝ\nTÀI KHOẢN</string>
    <string name="register_enter_name"><font color='@color/white'>Họ và tên</font><font color='@color/red'>*</font></string>
    <string name="register_enter_mail"><font color='@color/white'>Email</font><font color='@color/red'>*</font></string>
    <string name="register_enter_phone"><font color='@color/white'>Số điện thoại</font><font color='@color/red'>*</font></string>
    <string name="register_enter_password"><font color='@color/white'>Mật khẩu</font><font color='@color/red'>*</font></string>
    <string name="register_send_otp">Gửi OTP</string>
    <string name="register_completion">Đăng ký thành công!</string>
    <string name="register_redirect">Bạn sẽ được chuyển hướng về trang chủ trong chốc lát</string>

    <!-- Forget Password -->
    <string name="label_email">Email Address</string>
    <string name="forger_forget">QUÊN\nMẬT KHẨU</string>
    <string name="new_pass">Your New Password Must Be Different from Previously Used Password</string>
    <string name="forget_send_otp">Gửi OTP</string>
    <string name="forget_enter_phone">Số điện thoại</string>
    <string name="forget_reset">ĐẶT LẠI\nMẬT KHẨU</string>
    <string name="forget_new">Mật khẩu mới</string>
    <string name="forget_again">Nhập lại mật khẩu</string>
    <string name="forget_confirm">Xác nhận</string>

    <!-- Phone OTP -->
    <string name="phoneotp_confirm">Xác nhận</string>
    <string name="phoneotp_guide">Nhập mã OTP vừa được gửi đến số điện thoại của bạn</string>
    <string name="phoneotp_no_otp">Không nhận được mã OTP?</string>
    <string name="phoneotp_resend">Gửi lại</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">AIzaSyAXrv9RhlbG3gZPH2FiiqhAFhrQ7-u2hMU</string>

    <!--AutocompleteText-->
    <!--GoogleSignIn-->
    <string name="default_web_client_id">572466641139-m3cvm352ijd95cth3ed9ml0j7pibgkjh.apps.googleusercontent.com</string>

    <!--    Contact-->
    <string name="helpText"> We value your feedback and want to ensure you have a positive experience with <b>Appealic</b>. If you have any questions or require assistance, feel free to contact us using the following methods: </string>
    <string name="thankYou"> Thank you for choosing Appealic! </string>
    <string name="footer1">Appealic Global Company</string>
    <string name="footer2">Copyright © 2024 Appealic. All rights reserved.</string>
    <string name="helpCenter"><b>Help Center:</b>  For the quickest response, submit a ticket through our Help Center. Our dedicated support team is available to address your inquiries efficiently.</string>
    <!--    Legal-->
    <string name="pragraph1">Our Terms of Use, Privacy Policy, Cookie Policy and Community Guidelines form a legally binding agreement between you and Appealic to your use of the platform.</string>
    <string name="pragraph2">As well as forming the legal basis for your use of Appealic, these important documents will help you to understand how you can uphold the values and expectations we have for the community. This section of the Help Center will explain in more detail our policies on legal issues like trademark infringement, defamation, and processing requests for user information.</string>
    <string name="pragraph3">Please review the resources below:</string>
    <string name="title1">Law Enforcement Guidelines</string>
    <string name="pragraph4">This guide is for law enforcement authorities seeking information about Appealic users and accounts in the course of criminal investigations. It is also intended as a reference for Appealic users who are interested in finding out more about our policies and processes for handling law enforcement requests.</string>
    <string name="title2">Terms of Use</string>
    <string name="pragraph5">This is the legal document that you agree to follow when you sign up for an account –think of it as the rules for using Appealic.</string>
    <string name="title3">Community Guidelines</string>
    <string name="pragraph6">This is where you can find out more about the expectations we have for everyone who uses Appealic. It is based on our Terms of Use, but uses less legal language, so it is easier to understand.</string>
    <string name="title4">Privacy Policy</string>
    <string name="pragraph7">This is where you can find out more about the specific data we collect, how we store it and what we use it for.</string>
    <string name="title5">Cookies Policy</string>
    <string name="pragraph8">This is part of our Privacy Policy but focuses more specifically on our use of cookies and related technologies. We also share more information on how you can opt-out of specific services. </string>
    <string name="title6">Copyright Page</string>
    <string name="pragraph9">Find out more about copyright and our approach to protecting creators rights. </string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="sign_in">Sign in</string>

    <!--   Bank Transfer -->
    <string name="transfer_title1">Please transfer money to the account below with the exact amount as above.</string>
    <string name="transfer_title2">The system will automatically activate after 5 - 10 minutes. Please be sure that your payment is successful.</string>
    <string name="transfer_note">Note: Please fill in the transfer information exactly. Do not enter any text when transferring money to the virtual account.</string>

</resources>