<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_linear"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/dp_24">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Body1Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/liked_songs"
                android:textColor="@color/white" />

            <TextView
                style="@style/Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/number_of_liked_songs"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imv_search"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_search_24_filled" />

    </FrameLayout>

    <Button
        android:id="@+id/button"
        style="@style/Label"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/playRandomly" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imv_sort"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:src="@drawable/ic_sort"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recentlyAdded"
            style="@style/Body1Bold"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:paddingTop="13dp"
        android:layout_marginLeft="10dp">
        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="62dp">

            <ImageView
                android:padding="5dp"
                android:id="@+id/icon"
                android:layout_width="70dp"
                android:layout_height="62dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_plus"
                android:background="@drawable/btn_add"/>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_liked_songs"
                android:textColor="@color/white"
                style="@style/Body1Bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/subText"
                android:text="@string/click_here"
                style="@style/Label"/>

        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/lvLikedSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAdd" />
</RelativeLayout>