<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/home"
                style="@style/Heading2"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mic_20_filled"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_20_filled"
                android:layout_marginEnd="8dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alert_20_filled" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rrBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    style="@style/Heading4"
                    android:text="@string/newRelease" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btnViewAll"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:text="@string/viewAll"
                            style="@style/Caption"
                            android:textColor="@color/white"
                            android:background="@drawable/rounded_button" />

                        <Button
                            android:id="@+id/btnVietnam"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/vietNam"
                            style="@style/Caption"
                            android:textColor="@color/white"
                            android:background="@drawable/button_color_white" />

                        <Button
                            android:layout_width="15dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_color_white"
                            android:text="@string/international"
                            android:textColor="@color/white"
                            style="@style/Caption"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:id="@+id/lvTopSong"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/recentlyPlayed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/Heading4"
                        android:text="@string/recentlyPlayed" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewSong"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="horizontal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/Heading4"
                        android:text="@string/yourFavouriteArtists" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewArtist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="horizontal" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark"
        android:layout_marginBottom="0dp"
        app:itemIconSize="@dimen/dp_24"
        app:menu="@menu/nav_menu"
        app:itemTextAppearanceActive="@style/btn_nav"/>

</RelativeLayout>
